2015-09-12  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Updated cs_eval.dat with one generated with last openssl version
	* Added unknown security category
	
2015-09-12  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Added Cipher Suite Strength Evaluation with color feedback	
	* Fixed TIME_WAIT issue
	* Performed some code cleanup

2015-09-10  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Added right AC_CHECK_HEADERS in configure.ac
	* Added server mode
	* Added TODO file

2015-09-06  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Fixed Makefile.am

2015-09-06  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Renamed project

2015-09-05  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* First public version

